# DATA440_FinalProject

./: QuickStart.md  README.md  app.py  main.py  pyproject.toml  test.py
src/: dash_gen.py  dash_gen2.py  dash_gen3.py  data_clean2.py  data_clean3.py  data_cleaner.py  test_gen.py
src/old versions/: data_clean2.py  test_gen.py
