[project]
name = "data440-finalproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "rapidfuzz>=3.14.3",
    "streamlit>=1.51.0",
    "wordcloud>=1.9.4",
]
